# ferrite

./: .gitignore  Cargo.toml  Makefile  README.md
examples/prompts/: coding-agent-tail.txt  flappy.txt
src/: api.rs  artifacts.rs  bench.rs  cli.rs  inference.rs  main.rs  metal_kernels.rs  mlx_backend.rs  model.rs  onboarding.rs  qwen36.rs  sampling.rs  server.rs  state.rs
src/inference/: memory.rs  mtp.rs  prefill.rs
src/inference/prefill/: cache.rs  config.rs
src/metal_kernels/: gdn.rs  quantized.rs
src/metal_kernels/quantized/: cache.rs  config.rs  sources.rs
src/qwen36/: cache.rs  full_attention.rs  layers.rs  linear_attention.rs  load.rs  masks.rs  mlp.rs  mtp.rs
