[package]
name = "ferrite"
version = "0.1.0"
edition = "2024"
description = "Native MTP inference for Apple Silicon agents."
license = "Apache-2.0"

[features]
default = ["native-mlx"]
native-mlx = ["dep:mlx-rs", "dep:mlx-sys"]

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
inquire = "0.7"
libc = "0.2"
mlx-rs = { version = "0.25.3", features = ["safetensors"], optional = true }
mlx-sys = { version = "=0.2.0", optional = true }
rand = "0.9.4"
safetensors = "0.6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
